--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1>Kayla's Memory Game</h1>
     <h3>Score: <span id="result"></span></h3>
 
     <div id="grid"></div>
-    
 
     <script src="index.js"></script>
 </body>
